--- a/core/pom.xml
+++ b/core/pom.xml
@@ -44,7 +44,8 @@
                         <configuration>
                             <bnd><![CDATA[
 Import-Package: javax.annotation;version=0.0.0,*
-                                ]]></bnd>
+                                ]]>
+                            </bnd>
                         </configuration>
                     </execution>
                 </executions>
@@ -77,8 +78,69 @@ Import-Package: javax.annotation;version=0.0.0,*
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version> 5.1.2</version>
+                <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <id>scr-metadata</id>
+                        <goals>
+                            <goal>manifest</goal>
+                        </goals>
+                        <configuration>
+                            <supportIncrementalBuild>true</supportIncrementalBuild>
+                        </configuration>
+                    </execution>
+                </executions>
+                <configuration>
+                    <exportScr>true</exportScr>
+                    <instructions>
+                        <Import-Package>
+                            !org.jetbrains.annotations;version=0.0.0,
+                            javax.inject;version=0.0.0,
+                            javax.annotation;version=0.0.0,
+                            *
+                        </Import-Package>
+                        <Sling-Model-Packages>
+                            com.exadel.core.models
+                        </Sling-Model-Packages>
+                        <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
+                        <_dsannotations>*</_dsannotations>
+                        <_metatypeannotations>*</_metatypeannotations>
+                        <!--<_plugin>
+                            &lt;!&ndash; Enable registration of Sling Models classes via bnd plugin &ndash;&gt;
+                            org.apache.sling.bnd.models.ModelsScannerPlugin,
+                            &lt;!&ndash; Allow the processing of SCR annotations via a bnd plugin &ndash;&gt;
+                            org.apache.felix.scrplugin.bnd.SCRDescriptorBndPlugin;destdir=${project.build.outputDirectory}
+                        </_plugin>-->
+                    </instructions>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.felix</groupId>
+                        <artifactId>org.apache.felix.scr.bnd</artifactId>
+                        <version>1.9.0</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.sling</groupId>
+                        <artifactId>org.apache.sling.bnd.models</artifactId>
+                        <version>1.0.0</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
+
     </build>
+
+
+    <repositories>
+        <repository>
+            <id>jcenter</id>
+            <url>https://jcenter.bintray.com</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -202,6 +264,7 @@ Import-Package: javax.annotation;version=0.0.0,*
             </exclusions>
             <scope>test</scope>
         </dependency>
+
         <!-- Required to be able to support injection with @Self and @Via -->
         <dependency>
             <groupId>org.apache.sling</groupId>
@@ -214,6 +277,11 @@ Import-Package: javax.annotation;version=0.0.0,*
             <artifactId>org.apache.sling.api</artifactId>
             <version>2.16.0</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.apptastic</groupId>
+            <artifactId>rssreader</artifactId>
+            <version>2.5.0</version>
         </dependency>
     </dependencies>
 </project>
