--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <aem.publish.port>4503</aem.publish.port>
         <sling.user>admin</sling.user>
         <sling.password>admin</sling.password>
+        <vault.password.publish>admin</vault.password.publish>
         <vault.user>admin</vault.user>
         <vault.password>admin</vault.password>
         <frontend-maven-plugin.version>1.12.0</frontend-maven-plugin.version>
@@ -546,6 +547,7 @@ Bundle-DocURL:
                                     </goals>
                                     <configuration>
                                         <targetURL>http://${aem.publish.host}:${aem.publish.port}/crx/packmgr/service.jsp</targetURL>
+                                        <password>${vault.password.publish}</password>
                                     </configuration>
                                 </execution>
                             </executions>
